--- a/iPython/PracticeNotebook.ipynb
+++ b/iPython/PracticeNotebook.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1364f623dd9ace462fa640254eacf3f35b31dd3a2b1016ed5f8c8be598fe71d7"
+  "signature": "sha256:790de5f05b7be3fe02e0730b68d0783d2527fb4d4f5c4a2dac290440c6d25d5f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -79,30 +79,27 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "x=[]\n",
       "for i in range(a):\n",
-      "    print i"
+      "    if i <= 5:\n",
+      "        x.append(i)\n",
+      "    return x\n",
+      "print x\n",
+      "        "
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "0\n",
-        "1\n",
-        "2\n",
-        "3\n",
-        "4\n",
-        "5\n",
-        "6\n",
-        "7\n",
-        "8\n",
-        "9\n"
+       "ename": "SyntaxError",
+       "evalue": "'return' outside function (<ipython-input-5-6698b49da1ca>, line 5)",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-6698b49da1ca>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    return x\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
