Finished all of NumyPy, Counting stars up to 4, and DataIOc

--- a/NumPy/NumPyExercises.ipynb
+++ b/NumPy/NumPyExercises.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c056191fe983ded0ba212b50f8c5bb514680d8c632446c0f6246a2abc3b3318d"
+  "signature": "sha256:62f1bcb58622d06c8c3825b1efd1caccc7b3d4303d8c86f776b59436d9f7e228"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -59,9 +59,10 @@
       "arr1.reshape(4,4)\n",
       "print arr1\n",
       "print\n",
-      "arr2 = np.array([[0,0,0,0,0],[2.,0,0,0,0],[0,3.,0,0,0],[0,0,4.,0,0],[0,0,0,5.,0],[0,0,0,0,6.]])\n",
-      "arr2.reshape(6,5)\n",
-      "print arr2"
+      "\n",
+      "arr2 = ([0,0,0,0,0])\n",
+      "arr3 = np.diag(np.array([2,3,4,5,6]))\n",
+      "vstack((arr2,arr3))\n"
      ],
      "language": "python",
      "metadata": {},
@@ -74,17 +75,24 @@
         " [1 1 1 1]\n",
         " [1 1 1 2]\n",
         " [1 6 1 1]]\n",
-        "\n",
-        "[[ 0.  0.  0.  0.  0.]\n",
-        " [ 2.  0.  0.  0.  0.]\n",
-        " [ 0.  3.  0.  0.  0.]\n",
-        " [ 0.  0.  4.  0.  0.]\n",
-        " [ 0.  0.  0.  5.  0.]\n",
-        " [ 0.  0.  0.  0.  6.]]\n"
+        "\n"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 5,
+       "text": [
+        "array([[0, 0, 0, 0, 0],\n",
+        "       [2, 0, 0, 0, 0],\n",
+        "       [0, 3, 0, 0, 0],\n",
+        "       [0, 0, 4, 0, 0],\n",
+        "       [0, 0, 0, 5, 0],\n",
+        "       [0, 0, 0, 0, 6]])"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
