--- a/iPython/ErrorHandling.ipynb
+++ b/iPython/ErrorHandling.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1ebfb0fec1383de07e1865d63ba2ccc32130eb75b544b82d955772a3def19ac1"
+  "signature": "sha256:a427ba94a6e9304bded12da6d67f6c6f3597273c0228ba34879df7ce9dc622c2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1211,8 +1211,42 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "READ PAGE ABOUT pdb!!!"
+      "READ PAGE ABOUT pdb!!!\n",
+      "\n",
+      "https://docs.python.org/2/library/pdb.html"
      ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Assertions"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "x = 23\n",
+      "assert x > 0, \"x is not zero or negative\"\n",
+      "assert x%2 == 0, \"x is not an even number\""
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "AssertionError",
+       "evalue": "x is not an even number",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-1-403bbb8764e7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m23\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32massert\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"x is not zero or negative\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m%\u001b[0m\u001b[1;36m2\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"x is not an even number\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;31mAssertionError\u001b[0m: x is not an even number"
+       ]
+      }
+     ],
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
