Graphics and Error exercises done

--- a/iPython/ErrorHandlingExercises.ipynb
+++ b/iPython/ErrorHandlingExercises.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c34b0a7589e8dbcfe40a5bd8ef1b7f8fef37485b740aee620f09310f51054c40"
+  "signature": "sha256:f79771bccb09ddc3d69c74f1e2a22c47ac5c444f1cfd42a5cbfa1d7e6fd3d99d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -233,6 +233,116 @@
       }
      ],
      "prompt_number": 6
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "2.Here is a function which takes a filename, opens the file, reads the result, closes the file, and returns the contents. It should look something like this:"
+     ]
+    },
+    {
+     "cell_type": "raw",
+     "metadata": {},
+     "source": [
+      "def read_all_from_file(filename):\n",
+      "    f = open(filename)\n",
+      "    contents = f.read()\n",
+      "    f.close()\n",
+      "    return contents"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Use runtime error handling concepts to improve this function, so that it does the following:\n",
+      "1. raises an informative custom error if the file doesn't exist\n",
+      "2. uses try, except, else, and/or finally to safely return the file's contents & close the file if necessary.\n",
+      "3. add a keyword safe which defaults to False. If the function is called with safe=True, then return an empty string if the file doesn't exist."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def read_all_from_file(filename,safe = False):\n",
+      "    try:\n",
+      "        f = open(filename)\n",
+      "        contents = f.read()\n",
+      "        f.close()\n",
+      "        return contents\n",
+      "    except IOError as err:\n",
+      "        if safe == True:\n",
+      "            print \" \"\n",
+      "        else:    \n",
+      "            print err\n",
+      "            print \"File does not exist: \", err.filename\n",
+      "            return None"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 16
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "read_all_from_file('tmp.txt')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 17,
+       "text": [
+        "'this is the contents of the file'"
+       ]
+      }
+     ],
+     "prompt_number": 17
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "read_all_from_file('file.which.does.not.exist')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[Errno 2] No such file or directory: 'file.which.does.not.exist'\n",
+        "File does not exist:  file.which.does.not.exist\n"
+       ]
+      }
+     ],
+     "prompt_number": 18
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "read_all_from_file('file.which.does.not.exist', safe=True)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " \n"
+       ]
+      }
+     ],
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
