--- a/ASTR302 Project.ipynb
+++ b/ASTR302 Project.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0fe6627696e6d2166ca2a9f92daafc3612de685cdcfada6c175fa5f1b7f20953"
+  "signature": "sha256:17401a084a7d60e520fd2b04880e3cbe3898f5ee300f02be7dc92240639fe1a3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -30,30 +30,14 @@
      "source": [
       "   For my project, I wanted to see what the average distance of various galactic objects was. This is partly tied to the extent that the Sloan Digital Sky Survey can reach - we aren't looking at the Hubble Ultra Deep Field, but neither are we looking at just nearby stars. The goal of my project is to get an idea of what sort of scale we are looking at as we classify galaxies. To do that, I needed to go beyond the scope of this class and bring in some handy relations from cosmology, namely Redshift **z** and the Robertson-Walker Scale Factor **a**.\n",
       "   \n",
-      "   The scale factor is a measurement that relates the distance between objects (the proper distance) as a function of time, due to the expansion of the Universe. The redshift is, as in all other physics-based uses, a measure of how the wavelength of emitted light increases as it moves away from us. When we observe objects in the sky moving away from us due to the expansion of the Universe, it is easy to see how the scale factor and the redshift may be related. They are the following equation: "
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
+      "   The scale factor is a measurement that relates the distance between objects (the proper distance) as a function of time, due to the expansion of the Universe. The redshift is, as in all other physics-based uses, a measure of how the wavelength of emitted light increases as it moves away from us. When we observe objects in the sky moving away from us due to the expansion of the Universe, it is easy to see how the scale factor and the redshift may be related. They are the following equation:   \n",
       "<img class=\"mwe-math-fallback-png-inline tex\" alt=\"1+z = \\frac{a_\\mathrm{now}}{a_\\mathrm{then}}\" src=\"//upload.wikimedia.org/math/a/c/b/acbf960034d91632c14658bff23e7e71.png\">\n",
-      "\n",
       "which can also be rewritten (with some math) as: \n",
-      "\n",
       "<img class=\"mwe-math-fallback-png-inline tex\" alt=\"a(t) = \\frac{1}{1 + z}\" src=\"//upload.wikimedia.org/math/1/1/8/118904d08ccd82cd992c5e4d3790dab7.png\">\n",
-      "\n",
       "and in turn can be related to distance by\n",
-      "\n",
       "<img class=\"mwe-math-fallback-png-inline tex\" alt=\"d(t) = a(t)d_0,\\,\" src=\"//upload.wikimedia.org/math/9/e/7/9e711087f3e9058aa9bfbf3faa45ab11.png\">\n",
+      "where d0 is the current distance and d(t) is the distance when the light was emitted. From this, the Angular Diameter distance can be determined through the use of more advanced cosmological parameters and equations.\n",
       "\n",
-      "where d0 is the current distance and d(t) is the distance when the light was emitted. From this, the Angular Diameter distance can be determined through the use of more advanced cosmological parameters and equations. "
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
       "The next question is how do we obtain either value? For that, we turn to Galaxy Zoo and the SDSS Data Release 8, which has a handy database of values for each image. Galaxy Zoo's SkyServer is accessed from every galaxy's page on Galaxy Zoo, and returns a whole slew of information regarding that image, such as positions, filters, and assorted telescope data. Unfortunately, this is not the information that can get the required results. \n",
       "\n",
       "For some select images - I am unaware of why some and not others - there is associated spectroscopic data that contains the calculated z value of that image. This is the redshift value determined by the SDSS for that galaxy, and allows us to determine the distance. To actually do the calculations, based on many cosmological parameters, I used the CosmoCalc created by Edward Wright, using the base values for the parameters. Plugging in our z to this returns to us the angular diameter distance DA, which is a good approximation for the true distance between Earth and these galaxies. \n",
@@ -132,7 +116,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Once the distance measurements are sorted out, we can easily find all the relations we want, such as the average distance (the goal of the project),the standard deviation, and extremes. "
+      "Once the distance measurements are sorted out, we can easily find all the relations we want, such as the average distance (the goal of the project),the standard deviation, and extremes. This is easily accomplished through Python's NumPy library.  "
      ]
     },
     {
@@ -162,7 +146,7 @@
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
