--- a/GalaxyMerger/GalaxyMergers.ipynb
+++ b/GalaxyMerger/GalaxyMergers.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:8eb3506ee39acd095b4f443d3291d3136f435da4aafcaf7ce3af5be541e03d45"
+  "signature": "sha256:011a3baaf455d7ea4d968647b44d5dada27426ac3140437950286dbc43313993"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -28,9 +28,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "This is a simplified simulation of two galaxies merging - simplified in that it only one galaxy has any stars, the motion takes place in a plane, and the 120 stars sampled are massless and thus we ignore a whole slew of complicated relationships involving the gravitational attraction between stars. However, there is enough left to generate an interesting model that allows us to see what happens in a very specific, theoretical, situation.\n",
+      "This is a simplified simulation of two galaxies merging - simplified in that only one galaxy has any stars, the motion takes place in a plane, and the 120 stars sampled are massless and thus we ignore a whole slew of complicated relationships involving the gravitational attraction between the stars. However, there is enough left to generate an interesting model that allows us to see what happens in a very specific, theoretical, situation.\n",
       "\n",
-      "My personal project was to create a smulation detailing the Direct Passage, Equal Mass Galaxies example from the <a href=\"http://articles.adsabs.harvard.edu/cgi-bin/nph-iarticle_query?1972ApJ...178..623T&amp;data_type=PDF_HIGH&amp;whole_paper=YES&amp;type=PRINTER&amp;filetype=.pdf\"> 1972 Toomre and Toomre paper</a> which involved a circular galaxy,rotating counter-clockwise and passing the companion galaxy in a counter-clockwise manner as well."
+      "My personal project was to create a simulation detailing the Direct Passage, Equal Mass Galaxies example from the <a href=\"http://articles.adsabs.harvard.edu/cgi-bin/nph-iarticle_query?1972ApJ...178..623T&amp;data_type=PDF_HIGH&amp;whole_paper=YES&amp;type=PRINTER&amp;filetype=.pdf\"> 1972 Toomre and Toomre paper</a> which involved a circular galaxy,rotating counter-clockwise and passing the companion galaxy in a counter-clockwise manner as well."
      ]
     },
     {
@@ -44,8 +44,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "From Toomre and Toomre, we are given a set of initial conditions that are used in the four examples they present. \n",
-      "1. The Main Galaxy has 120 stars arranged in 5 rings; they are separated in 12, 18, 24, 30, and 36 stars from the innermost to the outermost ring.\n",
+      "From Toomre and Toomre, we are given a set of initial conditions that are used in the four examples they present:\n",
+      "1. The Main Galaxy has 120 stars arranged in 5 rings; they are separated in 12, 18, 24, 30, and 36 stars from the innermost to the outermost ring, evenly spaced in each ring.\n",
       "2. Each ring is a specific distance away from the pericenter of the galactic orbit, Rmin, which is set to be 25 kpc.\n",
       "    * From inner to outer ring, these distances are 0.2, 0.3, 0.4, 0.5, and 0.6 of Rmin, such that the outermost ring orbits at 15 kpc from the center of the Main Galaxy.\n",
       "3. The mass of the Main Galaxy (and the Companion in this example) is set to be `1e11` Solar Masses.\n",
@@ -77,8 +77,8 @@
      "source": [
       "Where \n",
       "* \u03b3 is the Gravitational constant.\n",
-      "2. M is the central mass of the main galaxy and S is the central mass of the disrupting galaxy\n",
-      "3. r is the radius vector from mass M to massless point particle m, representing a single (massless) star in the outer disk of the main galaxy.\n",
+      "2. M is the central mass of the Main galaxy and S is the central mass of the Companion Galaxy\n",
+      "3. r is the radius vector from mass M to massless point particle m, representing a single (massless) star in the outer disk of the Main Galaxy.\n",
       "4. R is the radius vector from M to S\n",
       "5. \u03c1=R\u2212r"
      ]
@@ -87,7 +87,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "However, I am unsure if Toomre and Toomre utilized these equations in their examples, as their images show mere passages, which the above equations result in orbits. Thus, I have that represents both."
+      "However, I am unsure if Toomre and Toomre utilized these equations in their examples, as their images show mere passages, while the above equations result in orbits. Thus, I have code that represents both."
      ]
     },
     {
@@ -258,7 +258,7 @@
      "source": [
       "The first array lists the starting x positions of each star, the second the y positions, the third the x component of the velocity, and the final array contains the y component of the initial velocity. \n",
       "\n",
-      "The funny looking green flags represent the velocity, both the direction and magnitude. They are the same symbol used in meterology and weather mapping, <a href=\"http://commons.wikimedia.org/wiki/File:Wind_barbs.gif#mediaviewer/File:Wind_barbs.gif\">known as wind barbs</a> where in the narrow tail points in the direction of travel, and the number of half lines, full lines, and flags indicates magnitude. For this project, half=4, full=9, flag=15 kpc/YRe8.\n",
+      "The funny looking green flags represent the velocity, both the direction and magnitude. They are the same symbol used in meterology and weather mapping, <a href=\"http://commons.wikimedia.org/wiki/File:Wind_barbs.gif#mediaviewer/File:Wind_barbs.gif\">known as wind barbs</a>, where in the narrow tail points in the direction of travel, and the number of half lines, full lines, and flags indicates magnitude. For this project, half=4, full=9, and flag=15 kpc/YRe8.\n",
       "\n",
       "However, that is just one ring, so to get an idea of the full thing, we can put them all together to generate the Main Galaxy."
      ]
@@ -308,7 +308,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Using similar code, I created a list to arrange as an array containing all the information for each star in the galaxy."
+      "Using similar code, I created a few lists to arrange as an array containing all the information for each star in the galaxy."
      ]
     },
     {
@@ -454,7 +454,7 @@
       "\n",
       "The graph matches the one from Toomre and Toomre's paper fairly closely, albeit with no units on their example it is hard to know if the scaling is right. For this, the axes are both in kpc. Each black dot represents the respective galaxy at an integer time step (starting from t = -1) where t = 0 is when both galaxies cross the x-axis. The green dashed lines represent R, and it provides a nice visualization of what a pure passage would look like.\n",
       "\n",
-      "Combining the data from this array and the Orbital.Star() arrays, we can create a set of arrays that provide all the required initial conditions for use in modelling the Pfleiderer equations:"
+      "Combining the `t = 0` data from this array and the Orbital.Star() arrays, we can create a set of arrays that provide all the required initial conditions for use in modelling the Pfleiderer equations:"
      ]
     },
     {
@@ -679,7 +679,7 @@
      "source": [
       "Sure enough, we can go out to a billion years, and the stars remain in their circular orbit if they are not disturbed. The frame of reference for this is from the center of the galaxy, thus the red dot at the origin. This is in opposition to the graph of the orbiting galaxies, which takes place in the center of mass frame.\n",
       "\n",
-      "What happens if we throw in the Companion Galaxy?"
+      "Now that we know the Pfleiderer equations work when `S = 0`, what happens if we throw in the Companion Galaxy (`S = M`)?"
      ]
     },
     {
@@ -774,14 +774,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Even at the 0.5 timestep, we can see things start to get a little weird. Unfortunately, the code only allows me to get to 3.0 timesteps before things start to break. I have a feeling it is units, somewhere, but I'm not sure where. At about 2.8 timesteps, we also see the companion galaxy come onto the graph from the right side, and it moves towards the center of the frame. "
+      "Even at the 0.5 timestep, we can see things start to get a little weird. Unfortunately, the code only allows me to get to 3.0 timesteps before things start to break. I have a feeling it is due to units, somewhere, but I'm not sure where. At about 2.8 timesteps, we also see the companion galaxy come onto the graph from the right side, and it moves towards the center of the frame. "
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Unfortunately, due to the bugs in the program, getting a consistent slider animation is not possible, but I did save some images to show how it looks at other timesteps (barring a few problem points)."
+      "Unfortunately, due to the bugs in the program, getting a consistent slider animation is not possible, but I did find timesteps that had reasonable looking graphs, to show how it looks as we go further in time (barring a few problem points)."
      ]
     },
     {
@@ -795,9 +795,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The first still shows the galaxy with timestep interval of 1, interact interval of 1 at t = 6. We can see stars starting to form a line on/towards the Companion Galaxy. This is remeniscent of the of the bridges that form the focus of the Toomre and Toomre paper, so it is not surprising to see it here, and almost reassuring. \n",
+      "The first still shows the galaxy with timestep interval of 1, interact interval of 1 at t = 6. We can see stars starting to form a line on/towards the Companion Galaxy. This is reminiscent of the of the bridges that form the focus of the Toomre and Toomre paper, so it is not surprising to see it here, and almost reassuring. Unfortunately, whether it is intentional or a lucky bug, I am unsure.\n",
       "\n",
-      "What can be seen readily is the far fewer stars present with the change in interval. Instead of an interval of .1 ~ 1e7 yrs, it's been changed to 1, so integer steps that correspond to 1e8 yrs. It appears to be a lot less cohesive than the galaxy with smaller intervals. Overall, the stars are very apparently disturbed by the Companion Galaxy."
+      "What can be readily seen is that there are far fewer stars present with the change in interval. Instead of an interval of .1 ~ 1e7 yrs, it's been changed to 1, so integer steps that correspond to 1e8 yrs. It appears to be a lot less cohesive than the galaxy with smaller intervals. Overall, the stars are very apparently disturbed by the Companion Galaxy."
      ]
     },
     {
@@ -826,7 +826,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Given the initial conditions and sources from two papers, I have partially modelled the merging and orbit of two galaxies, and seen what happens in a very specific and imaginary case. While I wish I could have ironed the bugs out and gotten the star disturbances completely worked out, the working code is enough to at least show proof of concept, and with more time can be remedied. \n",
+      "Given the initial conditions and sources from two papers, I have partially modelled the merging and orbit of two galaxies, and seen what happens in a very specific and imaginary case. While I wish I could have ironed the bugs out and gotten the star disturbances completely worked out, the working code is enough to at least show proof of concept, and with more time can be remedied. It correctly models the orbit of two galaxies, and has been shown to model a circular orbit. The circular orbit has uses in other areas of physics (for instance, orbitting point charges), which means the code can be generalized.  \n",
       "\n",
       "Most parts of the code should be entirely resuable, and require just changing the initial conditions and constants at the beginning off the page. Of course, further tweaking may be required to combat any bugs, at least until they are all ironed out of this first example. "
      ]
